finished two sum and midway thru three sum

--- a/src/content/blog/108-convert-arr-btree.mdx
+++ b/src/content/blog/108-convert-arr-btree.mdx
@@ -1,5 +1,5 @@
 ---
-title: "108. Convert Sorted Array to Binary Search Tree"
+title: "Convert Sorted Array to Binary Search Tree"
 description: ""
 pubDate: "3/13/2024"
 heroImage: ""
