Fixed failed deployment by removing hero image field from all mdx files

--- a/src/content/blog/1-twosum.mdx
+++ b/src/content/blog/1-twosum.mdx
@@ -2,14 +2,13 @@
 title: "1. 2 Sum"
 description: ""
 pubDate: "3/27/2024"
-heroImage: ""
 ---
 
 ##### Introduction | [Link](https://leetcode.com/problems/two-sum/description/)
 
 This is a two pointer problem that asks us to find two numbers that sum to the target parameter given an array.
 
-##### Intuition
+##### Solution
 
 Leetcode is asking us to solve this problem using two pointers so we will go with that approach. This approach can also be applied to future nSum problems. Before I outline the approach, I'd like to highlight two important notes in the problem description.
 
