--- a/src/content/blog/108-convert-arr-btree.mdx
+++ b/src/content/blog/108-convert-arr-btree.mdx
@@ -21,7 +21,7 @@ Let's now define a HBST. According to leetcode, "A height-balanced binary tree i
 
 In the image above there are two binary search trees with their depths written next to each node. We can see that figure 1 is a HBST since nodes C and D have a depth difference of only 1. Within figure 2, nodes C and B have a depth difference of 2. Therefore, figure 2 is NOT a HBST.
 
-##### Intuition
+##### Solution
 
 Given the examples, we can build a binary tree using the following process :
 
