--- a/src/content/blog/15-threesum.mdx
+++ b/src/content/blog/15-threesum.mdx
@@ -2,7 +2,6 @@
 title: "15. 3 Sum"
 description: ""
 pubDate: "3/27/2024"
-heroImage: ""
 ---
 
 import Figure from "../../components/Figure/Figure.tsx";
@@ -11,7 +10,7 @@ import Figure from "../../components/Figure/Figure.tsx";
 
 This is a two pointer problem that asks us to find three numbers that sum to the target parameter given an array. I would suggest reviewing 2sum problems before attempting to solve this. I personally struggled with this problem quite a bit so take your time when trying to understand 3sum.
 
-##### Intuition
+##### Solution
 
 Given a list, the problem asks us to return all unique triplets that sum to 0. This problem is quite similar to 2 sum but we need to make some adjustments to our algorithm. This explanation assumes that the reader understands the two pointer approach to 2 sum.
 
