Actually fixed the production bug

--- a/src/content/blog/234-palindrome-ll.mdx
+++ b/src/content/blog/234-palindrome-ll.mdx
@@ -10,7 +10,9 @@ import Figure from "../../components/Figure/Figure.tsx";
 
 This problem asks us to determine if a linked list is a palindrome. What makes this problem a little challenging is the nature of linked lists where you can only traverse forward. There are multiple ways of solving this problem such as through arrays, stacks, or recursion, but I will be going through the two pointer solution.
 
-##### Overview of Linked Lists
+##### Verifying Palindromes
+
+Normally with a list / array, we can just check the 1st value and the nth value sequentially until we determine whether or not the given list / array is a palindrome. But with a linked list we cannot do that.
 
 ##### Intuition
 
