foundation of tags page

--- a/src/content/blog/108-convert-arr-btree.mdx
+++ b/src/content/blog/108-convert-arr-btree.mdx
@@ -2,7 +2,7 @@
 title: "108. Convert Sorted Array to Binary Search Tree"
 description: ""
 pubDate: "3/13/2024"
-heroImage: ""
+tags: ["divide and conquer", "leetcode"]
 ---
 
 import Figure from "../../components/Figure/Figure.tsx";
