--- a/src/content/blog/1-twosum.mdx
+++ b/src/content/blog/1-twosum.mdx
@@ -2,6 +2,7 @@
 title: "1. 2 Sum"
 description: ""
 pubDate: "3/27/2024"
+tags: ["two pointer", "leetcode"]
 ---
 
 ##### Introduction | [Link](https://leetcode.com/problems/two-sum/description/)
