--- a/src/content/blog/15-threesum.mdx
+++ b/src/content/blog/15-threesum.mdx
@@ -2,6 +2,7 @@
 title: "15. 3 Sum"
 description: ""
 pubDate: "3/27/2024"
+tags: ["two pointer", "leetcode"]
 ---
 
 import Figure from "../../components/Figure/Figure.tsx";
