--- a/src/content/blog/202-happy-number.mdx
+++ b/src/content/blog/202-happy-number.mdx
@@ -2,6 +2,7 @@
 title: "202. Happy Number"
 description: ""
 pubDate: "3/21/2024"
+tags: ["two pointer", "leetcode"]
 ---
 
 import Figure from "../../components/Figure/Figure.tsx";
