--- a/src/content/blog/234-palindrome-ll.mdx
+++ b/src/content/blog/234-palindrome-ll.mdx
@@ -2,6 +2,7 @@
 title: "234. Palindrome Linked List"
 description: ""
 pubDate: "3/31/2024"
+tags: ["two pointer", "leetcode"]
 ---
 
 import Figure from "../../components/Figure/Figure.tsx";
