--- a/src/content/blog/283-move-zero.mdx
+++ b/src/content/blog/283-move-zero.mdx
@@ -2,6 +2,7 @@
 title: "283. Move Zeroes"
 description: ""
 pubDate: "4/4/2024"
+tags: ["two pointer", "leetcode"]
 ---
 
 ##### Introduction | [Link](https://leetcode.com/problems/move-zeroes/description/)
